--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <li><a href="#events">Events</a></li>
             </ul>
         </nav>
+
+        <i class="fa-solid fa-bars-staggered"></i>
     </header>
 
 
