--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/RTP_Logo.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/b16a1d681b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
@@ -14,8 +15,7 @@
 
     <header>
         <div class="logo">
-            <!--<img src="" alt="logo">-->
-            <i class="fa-brands fa-typo3"></i>
+            <img src="/assets/RTP_Logo.png" alt="logo">
         </div>
 
         <nav>
