--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="logo">
             <img src="/assets/RTP_Logo.png" alt="logo">
+            <h2>RTP</h2>
         </div>
 
         <nav>
