--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                     <div>
                         <i class="fa-solid fa-calendar-days"></i>
-                        <p>3rd June 2024</p>
+                        <p>22nd June 2024</p>
                     </div>
 
                     <div>
@@ -165,8 +165,8 @@
 
 
     <script>
-        // Set the event time to June 5, 2024, at 10:00 AM
-        const eventTime = new Date('June 3, 2024 10:00:00').getTime();
+        // Set the event time to June 22, 2024, at 10:00 AM
+        const eventTime = new Date('June 22, 2024 10:00:00').getTime();
 
         // Update the countdown every second
         const countdownInterval = setInterval(() => {
