countdown ARRANGED PROPERLY

--- a/index.html
+++ b/index.html
@@ -146,7 +146,23 @@
 
             <div class="countdown-holder">
                 <p>starts in:</p>
-                <h1><span class="hour">00</span>:<span class="mins">00</span>:<span class="secs"></span></h1>
+
+                <div class="event-starts">
+                    <h2>
+                        <span class="hour">00</span>
+                        <p>Hours</p>
+                    </h2>
+
+                    <h2>
+                        <span class="mins">00</span>
+                        <p>Mins</p>
+                    </h2>
+
+                    <h2>
+                        <span class="secs"></span>
+                        <p>Secs</p>
+                    </h2>
+                </div>
             </div>
         </div>
     </section>
